--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           </div>
           <!-- <div class="vertical-line"></div> -->
           <div class="sitemap-container">
-            <p class="footer-heading">SITEMAP</p>
+            <div class="sitemap-heading">SITEMAP</div>
             <div class="footer-sitemap">
               <div class="sitemap-left">
                 <li><a href="#">Home</a></li>
